name inquiry addition
