# routes/api.php
@@ -17,6 +17,7 @@ Route::post('/credit-account', [App\Http\Controllers\AccountsApiController::clas
 Route::post('/account-balance', [App\Http\Controllers\AccountsApiController::class, 'checkAccountBalance']);
 Route::post('/field-deposit', [App\Http\Controllers\AccountsApiController::class, 'saveFieldDeposit']);
 Route::post('/register-account', [App\Http\Controllers\AuthApiController::class, 'registerAccount']);
+Route::get('/name-inquiry/{number}', [App\Http\Controllers\NumberValidationApiController::class, 'nameInquiryAccountNumber']);
 
 // curl -ivk http://127.0.0.1:8001/api/verify-pin
 // --header 'Content-Type: application/json' \
